--- a/app/src/main/res/layout/activity_tictactoe.xml
+++ b/app/src/main/res/layout/activity_tictactoe.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="#eeeeee"
-    tools:context=".MainActivity">
+    tools:context=".TicTacToeGameActivity">
 
     <TableRow
         android:layout_width="match_parent"
